[jvm-packages] support jdk 17 for test